@startuml SchottenTotten

class Carte {

    jouée : booléen
}

class CarteBasique {

    couleur
    valeur
}
class CarteTactique {

    appliquer(p : Partie)
}
class Main {

    piocher(p : Pioche)
    jouer(c : Carte, t : Tuile)
}
class Pioche {

    mélanger()
    estVide() : booléen
}
class Tuile {

    estPleine() : booléen
    estRevendiquée() : booléen
    revendiquer(j : Joueur)
    comparer() : entier
}
class Frontière {

    estFinie() : booléen
    gagnant() : Joueur
}
class Agent {

    choisirCarte(m : Main, f : Frontière) : Carte
}
class Partie {
    édition : texte 
    revendiquerAutomatique : booléen 
    commencer()
    jouerTour()
    testerFin()
}
class Joueur {
    nom : texte 
    score : entier 
}
class Jeu {

}

Carte <|-- CarteBasique
Carte <|-- CarteTactique
Carte "1" - "6" Main
Pioche “1” - "0…" Carte
Tuile “1” *-- “0…6” Carte
Frontière “1” *-- “9” Tuile

@enduml